--- a/golrs.yaml
+++ b/golrs.yaml
@@ -1,20 +1,26 @@
 ---
 apiVersion: apps/v1
-kind: Replicaset
+kind: ReplicaSet
 metadata:
-  name: golrs
+  name: gol
 spec: 
 #  minReadySeconds: 5
   replicas: 2
+  selector:
+    matchLabels:
+    app: gol
+    #env: dev
   template: 
     metadata: 
       labels:
-        app: golu
+        app: gol
         version: "160621"
+        #env: dev
     spec:     
-    containers:
+      containers:
       - image: qualitythought/gameoflife:07112020
-
-        name: golu
+        name: gol
         ports:
           - containerPort: 8080
+            protocol: TCP
+
