--- a/gameoflife.yaml
+++ b/gameoflife.yaml
@@ -5,10 +5,12 @@ metadata:
   name: gol
 spec:
   containers:
-    - image: qualitythought.in/gameoflife:07112020
+    - image: ashishkarnadlinux/simple-nginx:latest
       name: golqt
       ports: 
         - containerPort: 8080
           name: golqthttp
           protocol: TCP
+      command: ["printenv"]
+      args: ["HOSTNAME", "KUBERNETES_PORT"]
            
