--- a/spc.yaml
+++ b/spc.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: namespace-demo
+  name: spc
   namespace: dev
 spec:
   containers:
-    - image: jenkins/jenkins
-      name: jenkinscont
+    - image: springcommunity/spring-petclinic-visits-service
+      name: spc
       ports:
         - containerPort: 8080
-          name: jenkinsport
+          name: spcport
           protocol: TCP
