--- a/nginxserv.yaml
+++ b/nginxserv.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: jk-service
 spec:
   selector:
-    app: nginx
+    app: jk
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodeport: 33000
+      nodePort: 33000
